# PowerToys

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  postcss.config.cjs  vite.config.ts
.github/: FUNDING.yml
docs/: randomness-paper.md
docs/data/: diagnostics.csv  history.csv  scores.csv
museum/: README.md  sorter.py
old/: randomfileopener.py
scripts/: release.ts
src/: App.css  App.tsx  NavBar.module.css  NavBar.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  stats.json
src-tauri/src/: context.rs  fileauditorcommands.rs  filerandomisercommands.rs  filesortercommands.rs  lib.rs  main.rs  setting_commands.rs
src-tauri/src/models/: common.rs  file_randomiser_models.rs  file_sorter_models.rs  mod.rs  settings.rs
src/core/api/: appSettingsApi.ts  fileAuditorApi.ts  fileRandomiserApi.ts  fileRandomiserApi.tsx  fileSorterApi.ts  fileSorterApi.tsx  presetsApi.ts  presetsApi.tsx
src/core/app/: App.tsx  ErrorBoundary.tsx  NavBar.module.css  NavBar.tsx
src/core/hooks/: fileRandomiserStateProvider.tsx  useAppSettings.tsx
src/core/mainpage/: MainPage.css  MainPage.tsx
src/file-auditor/: auditorKeybinds.ts  fileAuditor.css  fileAuditor.tsx
src/file-randomiser/: clampedTooltipText.tsx  fileRandomiser.css  fileRandomiser.tsx  fileTree.tsx  filtersPanel.tsx  itemActions.tsx  presetControls.tsx  ruleBadge.tsx  section.tsx  statsWindow.tsx  toolbar.tsx
src/file-sorter/: consolePanel.tsx  fileSorter.tsx  fileSorterItemActions.tsx  sortPreviewTree.tsx  toolbar.tsx
src/mainpage/: MainPage.tsx
src/types/: common.ts  filerandomiser.ts  filesorter.ts  settings.ts  settings.tsx
src/utils/: displayKey.ts  formatBytes.ts
(+34 files in other folders)
